Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.11
-
Fix Version/s: N/A
-
Component/s: Galera
-
Labels:None
Description
Update the wsrep_provider_options read_only value in the system_variables table. If plugin-wsrep-provider=ON, the server sets the wsrep_provider_options variable as read-only, but it is not reflected in the system_variables table.
If we set plugin-wsrep-provider=OFF, the server allows changing wsrep_provider_options dynamically.
node1:root@localhost> SELECT VARIABLE_NAME,READ_ONLY FROM information_schema.system_variables where VARIABLE_NAME like '%wsrep_provider_options%'; |
+------------------------+-----------+ |
| VARIABLE_NAME | READ_ONLY |
|
+------------------------+-----------+ |
| WSREP_PROVIDER_OPTIONS | NO | |
+------------------------+-----------+ |
1 row in set (0.085 sec) |
|
node1:root@localhost> set global WSREP_PROVIDER_OPTIONS="gcs.fc_limit=32"; |
ERROR 1238 (HY000): Variable 'wsrep_provider_options' is a read only variable |
node1:root@localhost>
|
Attachments
Issue Links
- relates to
-
MDEV-22570 Split wsrep_provider_options in several options
-
- In Progress
-