MDEV-30120 : Update the wsrep_provider_options read_only value in the system_variables table.

When wsrep-provider-options plugin is initialized we need to update
wsrep-provider-options variable as READ_ONLY.